<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextAppearance="@style/ToolbarTitle"
        android:background="@color/actionbar_background" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/aboutapp_frankkienl_image"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_alignParentRight="true"
            android:adjustViewBounds="true"
            android:paddingTop="16dp"
            android:src="@drawable/frankkienl" />

        <LinearLayout
            android:id="@+id/aboutapp_textcontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/aboutapp_frankkienl_image"
            android:orientation="vertical">

            <TextView
                style="@style/textStyle_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_this_app" />

            <TextView
                android:id="@+id/aboutapp_version"
                style="@style/textStyle_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/aboutapp_frankkienl_description"
                android:text="@string/aboutapp_frankkienl_description"
                style="@style/textStyle_details"
                android:autoLink="web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/textStyle_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutapp_licences" />
        </LinearLayout>

        <WebView
            android:id="@+id/aboutapp_webview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboutapp_textcontainer" />
    </RelativeLayout>
</LinearLayout>