<?xml version="1.0" encoding="utf-8"?><!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextAppearance="@style/ToolbarTitle"
        android:background="@color/actionbar_background" />

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="nl.frankkie.bronydays2015.LoginActivity">
        <!-- As the main content view, the view below consumes the entire
                 space available using match_parent in both dimensions. -->
        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            tools:context="nl.frankkie.bronydays2015.LoginActivity">
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                
                <TextView
                    android:id="@+id/login_header"
                    style="@style/textStyle_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Login" />

                <TextView
                    style="@style/textStyle_details"
                    android:text="@string/login_details"
                    android:layout_below="@id/login_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                
                <com.google.android.gms.common.SignInButton
                    android:layout_alignParentBottom="true"
                    android:paddingBottom="16dp"
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:text="@string/sign_out"
                    android:id="@+id/sign_out_button"
                    android:visibility="gone"
                    android:layout_below="@id/sign_in_button"
                    android:paddingBottom="16dp"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/view_achievements"
                    android:text="@string/view_achievements"
                    android:visibility="gone"
                    android:layout_above="@id/sign_out_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </FrameLayout>
        <!-- android:layout_gravity="start" tells DrawerLayout to treat
             this as a sliding drawer on the left side for left-to-right
             languages and on the right side for right-to-left languages.
             If you're not building against API 17 or higher, use
             android:layout_gravity="left" instead. -->
        <!-- The drawer is given a fixed width in dp and extends the full height of
             the container. -->
        <fragment
            android:id="@+id/navigation_drawer"
            android:name="nl.frankkie.bronydays2015.NavigationDrawerFragment"
            android:layout_width="@dimen/navigation_drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            tools:layout="@layout/fragment_navigation_drawer" />
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>